authzpol/authenticated-to-gw.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authenticated-to-gw
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"] # Matches any authenticated principal outside the cluster
    when:
    - key: request.auth.claims[iss]
      values: ["https://accounts.google.com"]
