authzpol/external-login.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: external-to-login-callback
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: [/login, /callback*]
