authzpol/frontend-to-cart.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: frontend-to-cart
  namespace: online-shop
spec:
  selector:
    matchLabels:
      run: online-shop-cart
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/online-shop/sa/frontend"]
